added resultset to datastore. It is now a fully working object which is also properly used by executor mockup
