# static/swagger.yaml
@@ -23,6 +23,8 @@ tags:
     description: Supplier functions
   - name: Consumer API
     description: Consumer functions
+  - name: Results
+    description: All result oriented functions
 schemes:
   - http
 securityDefinitions:
@@ -122,31 +124,6 @@ paths:
             $ref: '#/definitions/User'
         '400':
           description: Invalid username
-        '404':
-          description: User not found
-    put:
-      tags:
-        - User
-        - Admin
-        - Consumer API
-        - Supplier API
-      summary: Update user
-      description: This can only be done by the authorized user.
-      operationId: update_user
-      produces:
-        - application/json
-      security:
-        - GoogleIdToken: []
-      parameters:
-        - in: body
-          name: body
-          description: Updated user object
-          required: true
-          schema:
-            $ref: '#/definitions/User'
-      responses:
-        '400':
-          description: Invalid user supplied
         '404':
           description: User not found
     delete:
@@ -543,19 +520,16 @@ paths:
           description: Operation has been queued
         '404':
           description: Wrong datasetID or algorithmID
-      
-  '/algorithms/{algorithmID}/{resultsetID}':
+  '/results/{algorithmID}/{datasetID}':
     get:
       tags:
-        - Algorithms
+        - Results
         - Consumer API
       summary: >-
-        The Result Set endpoint returns result set data for a given algorithm
-        and ID.
+        Returns resultSet for specified algorithm+dataset combination
       description: >-
-        The Result Set endpoint returns result set data for a given algorithm
-        and ID.
-      operationId: getAlgorithmsAlgorithmResultsetID
+        Returns resultSet for specified algorithm+dataset combination
+      operationId: getResult
       consumes: []
       produces:
         - application/json
@@ -567,35 +541,28 @@ paths:
           description: ID of an algorithm
           required: true
           type: string
-        - name: resultsetID
+        - name: datasetID
           in: path
-          description: ID of the result-set
+          description: ID of a dataset
           required: true
           type: string
       responses:
-        '102':
-          description: The job is in progress
         '200':
-          description: A resulting set of data.
-          schema:
-            $ref: '#/definitions/ResultSet'
-        '401':
-          description: Not authenticated. Need to login.
-        '403':
-          description: Not the proper owner of that result-set
+          description: Result
         '404':
-          description: Wrong resultsetID or algorithmID
-          schema:
-            $ref: '#/definitions/Error'
+          description: Result not found
     delete:
       tags:
-        - Algorithms
+        - Results
         - Consumer API
-      summary: Confirm Result-Set receive and request deletion.
-      description: Confirm Result-Set receive and request deletion.
-      operationId: deleteResultSet
+      summary: >-
+        Deletes resultSet for specified algorithm+dataset combination
+      description: >-
+        Deletes resultSet for specified algorithm+dataset combination
+      operationId: deleteResult
       consumes: []
-      produces: []
+      produces:
+        - application/json
       security:
         - GoogleIdToken: []
       parameters:
@@ -604,22 +571,19 @@ paths:
           description: ID of an algorithm
           required: true
           type: string
-        - name: resultsetID
+        - name: datasetID
           in: path
-          description: ID of the result-set
+          description: ID of a dataset
           required: true
           type: string
       responses:
         '200':
-          description: OK
-        '401':
-          description: Not authenticated. Need to login.
-        '403':
-          description: Not the proper owner of that result-set
+          description: Result has been deleted
         '404':
-          description: Wrong resultsetID or algorithmID
-          schema:
-            $ref: '#/definitions/Error'
+          description: Result not found
+      
+    
+  
 definitions:
   AlgorithmBody:
     type: object
